--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "github-markdown-css": "^5.8.1",
+    "isomorphic-dompurify": "^2.28.0",
     "jsdom": "^27.0.0",
     "katex": "^0.16.22",
     "marked": "^16.3.0",
