--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.28.0",
     "jsdom": "^27.0.0",
     "katex": "^0.16.22",
@@ -23,6 +24,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
