--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "fix": "npm run lint && npm run format"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.28.0",
     "jsdom": "^27.0.0",
+    "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.22",
     "marked": "^16.3.0",
     "next": "15.5.3",
@@ -28,15 +30,15 @@
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
-    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
-    "remark-rehype": "^11.1.2"
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcrypt": "^6.0.0",
     "@types/jsdom": "^21.1.7",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
