--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: postgres:16
     container_name: gaist-psql
     ports:
-      - "${DB_PORT:-5433}:5432"
+      - "${DB_PORT}:5432"             # http://localhost:6542
     env_file:
       - ./.env
     volumes:
@@ -17,5 +17,21 @@ services:
       retries: 10
     restart: unless-stopped
 
+  pgadmin:
+    image: dpage/pgadmin4:8
+    container_name: gaist-pgadmin
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - "5050:80"             # http://localhost:5050
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${DB_ADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${DM_ADMIN_PASSW}
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    restart: unless-stopped
+
 volumes:
   pgdata:
+  pgadmin:
