--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "chk": "npm run lint && npm run format:check",
@@ -43,8 +43,9 @@
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.39.0",
     "eslint-config-next": "15.5.3",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
     "typescript": "^5"
   }
