--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint .",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "chk": "npm run lint && npm run format:check",
-    "fix": "npm run lint && npm run format"
+    "eslint": "eslint .",
+    "prettier": "prettier --write .",
+    "prettier:chk": "prettier --check .",
+    "check": "npm run eslint && npm run prettier:chk",
+    "lint": "npm run eslint && npm run prettier"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
